[project]
name = "dyn_geo"
version = "0.1.0"
description = "Stabilize images by feature matching detections at keypoints"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.9.1",
    "georef",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyqt5>=5.15.11",
    "pyturbojpeg==1.8.3",
    "pyyaml>=6.0.3",
    "roi-editor",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "typer>=0.26.7",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
roi-editor = { git = "ssh://git@github.com/wavesnsee/roi_editor", rev = "main" }
georef = { git = "ssh://git@github.com/wavesnsee/georef", rev = "main" }

[project.scripts]
dyn_geo = "dyn_geo.cli.app:app"
